@@ -1,5 +1,6 @@
 next
 ----
+-bug 2561858: added mummer and mumsgraph components to installer
 -ber_blast_hit_selector: will now accept gzipped input fsa files
 -train_for_glimmer3_iteration: now checks the first line of the --input_fsa_list to see if it's a file
 -berbtab2bsml: fixed bug where empty btab files would create polypeptide sequence element instead of CDS
